[gd_scene load_steps=2 format=3 uid="uid://b3wa1m684efgu"]

[ext_resource type="Script" path="res://multiplayer/mutiplayerContorller.gd" id="1_3t050"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3t050")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 167.0
offset_right = 185.0
offset_bottom = 198.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 170.0
offset_right = 275.0
offset_bottom = 201.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 171.0
offset_right = 354.0
offset_bottom = 202.0
text = "start"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 123.0
offset_right = 361.0
offset_bottom = 154.0
placeholder_text = "name"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
